Colab을 통해 생성됨

--- a/7주차/CIFAR_10_classification_in_3.ipynb
+++ b/7주차/CIFAR_10_classification_in_3.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "10ay2tBIxXY-NkxF1LH8EjYjlEEPYbrlv",
-      "authorship_tag": "ABX9TyPrThx+iaXQtrOCiTaFO1/t",
+      "authorship_tag": "ABX9TyNd8obskR3EC9YPCDHqese7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,7 +206,7 @@
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "\n",
         "# -----------------------------\n",
-        "# 2. 데이터 증강 (Data Augmentation)\n",
+        "# 2. 데이터 증강 (Data Augmentation) - 과적합 방지\n",
         "# -----------------------------\n",
         "datagen = ImageDataGenerator(\n",
         "    rotation_range=20,\n",
@@ -220,7 +220,7 @@
       "metadata": {
         "id": "LB-C_tO0i7uY"
       },
-      "execution_count": 23,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "sB01uESFftHA"
       },
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -279,14 +279,14 @@
         "from tensorflow.keras.callbacks import EarlyStopping\n",
         "\n",
         "# -----------------------------\n",
-        "# 5. EarlyStopping 설정\n",
+        "# 5. EarlyStopping 설정 - 과적합 방지\n",
         "# -----------------------------\n",
         "early_stop = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)"
       ],
       "metadata": {
         "id": "_E56oJ4HjScU"
       },
-      "execution_count": 28,
+      "execution_count": 34,
       "outputs": []
     },
     {
